# Experiment

./: .gitignore  pyproject.toml  readme.md  setup.py
src/: main.py
src/experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/expy/: __init__.py  event.py  event_backup2.py  event_operations.py  experiment.py  io.py  plotter.py  support.py
src/expy/jupyter/: Standard.ipynb  (+1 more)
tests/: 8001_5_Survey.txt  SnSe2_100%.peaks  SnSe2_Se.prf  Spot1_G_P00.peaks  Spot1_G_P08.peaks  Spot1_G_P14.peaks  Spot2_G_P10.peaks  Spot2_G_P13.peaks  Spot2_G_P16.peaks  Spot2_G_P17.peaks  Spot3_G_P04.peaks  Spot3_G_P16.peaks  Surv.csv  Surv_sputtered.csv  basic_experiment.py  on_SiO2_C1.txt  on_SiO2_Sputtered_Sn1.txt  out.func  out.pkl  out_test.json  test.py  testing.py
tests/data/: Pressures  RBM_P02:1:4.peaks  Spot1_G_P01.peaks  Spot1_G_P02.peaks  Spot1_G_P03.peaks  Spot1_G_P04.peaks  Spot1_G_P05.peaks  Spot1_G_P06.peaks  Spot1_G_P07.peaks  Spot1_G_P09.peaks  Spot1_G_P10.peaks  Spot1_G_P11.peaks  Spot1_G_P12.peaks  Spot1_G_P13.peaks  Spot1_G_P15.peaks  Spot1_G_P16.peaks  Spot1_G_P17.peaks  Spot2_G_P00.peaks  Spot2_G_P01.peaks  Spot2_G_P02.peaks  Spot2_G_P03.peaks  Spot2_G_P04.peaks  Spot2_G_P05.peaks  Spot2_G_P06.peaks  Spot2_G_P07.peaks  Spot2_G_P08.peaks  Spot2_G_P09.peaks  Spot2_G_P11.peaks  Spot2_G_P12.peaks  Spot2_G_P14.peaks  Spot2_G_P15.peaks  Spot3_G_P00.peaks  Spot3_G_P01.peaks  Spot3_G_P02.peaks  Spot3_G_P03.peaks  Spot3_G_P05.peaks  Spot3_G_P06.peaks  Spot3_G_P07.peaks  Spot3_G_P08.peaks  Spot3_G_P09.peaks  (+6 more)
tests/data_short/: Spot3_G_P14.peaks  Spot3_G_P17.peaks
(+2 files in other folders)
